# it_job

./: .env.template  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: linters.yaml
core/: admin.py  apps.py  data.py  models.py
core/management/commands/: generate_test_data.py  generate_test_data_factory.py
core/migrations/: 0001_initial.py
core/tests/: factories.py
it_job/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: init.bat  test_init.bat
