[tool.black]
skip-string-normalization = 'True'

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"
[tool.ruff.format]
quote-style = "single"

[tool.poetry]
name = "it-job"
version = "0.1.0"
description = ""
authors = ["Vovak <Vovakjh@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
django-money = "^3.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
